--- a/templates/PHP.xml
+++ b/templates/PHP.xml
@@ -46,10 +46,16 @@
       <option name="PHP Class Member" value="true" />
     </context>
   </template>
-  <template name="_t" value="/**&#10; * @test&#10; */&#10;public function it_$DOES$()&#10;{&#10;    $END$&#10;}" description="Constructor" toReformat="false" toShortenFQNames="true">
+  <template name="_t" value="/**&#10; * @test&#10; */&#10;public function it_$DOES$()&#10;{&#10;    $END$&#10;}" description="Test" toReformat="false" toShortenFQNames="true">
     <variable name="DOES" expression="" defaultValue="" alwaysStopAt="true" />
     <context>
       <option name="PHP Class Member" value="true" />
+    </context>
+  </template>
+  <template name="_a" value="static::assert$TYPE$($END$);" description="assert" toReformat="false" toShortenFQNames="true">
+    <variable name="TYPE" expression="" defaultValue="" alwaysStopAt="true" />
+    <context>
+      <option name="PHP Expression" value="true" />
     </context>
   </template>
 </templateSet>
