--- a/templates/PHP.xml
+++ b/templates/PHP.xml
@@ -70,4 +70,9 @@
       <option name="PHP Class Member" value="true" />
     </context>
   </template>
+  <template name="_ee" value="$this-&gt;expectException($END$);&#10;$this-&gt;expectExceptionMessage('...');&#10;" description="exspect exception" toReformat="false" toShortenFQNames="true">
+    <context>
+      <option name="PHP Expression" value="true" />
+    </context>
+  </template>
 </templateSet>
