PS-2020.2 <philipp.rieber@bicpi-on Update PHP.xml	Create templates.xml

--- a/templates/PHP.xml
+++ b/templates/PHP.xml
@@ -75,4 +75,10 @@
       <option name="PHP Expression" value="true" />
     </context>
   </template>
+  <template name="uuid" value="$VALUE$" toReformat="false" toShortenFQNames="true">
+    <variable name="VALUE" expression="groovyScript(&quot;java.util.UUID.randomUUID() as String&quot;)" defaultValue="" alwaysStopAt="true" />
+    <context>
+      <option name="OTHER" value="true" />
+    </context>
+  </template>
 </templateSet>
